RESOLVED FIXED129523
Crash at ebay.com when viewing auction items at com.apple.WebCore: WebCore::GraphicsContext3D::getExtensions + 10
https://bugs.webkit.org/show_bug.cgi?id=129523
Summary Crash at ebay.com when viewing auction items at com.apple.WebCore: WebCore::G...
Dean Jackson
Reported 2014-02-28 17:32:57 PST
We need to guard getExtensions for a pending context.
Attachments
Patch (1.59 KB, patch)
2014-02-28 17:34 PST, Dean Jackson
simon.fraser: review+
Dean Jackson
Comment 1 2014-02-28 17:34:31 PST
Dean Jackson
Comment 2 2014-02-28 18:00:40 PST
Note You need to log in before you can comment on or make changes to this bug.