Crash at ebay.com when viewing auction items at com.apple.WebCore: WebCore::GraphicsContext3D::getExtensions + 10 https://bugs.webkit.org/show_bug.cgi?id=129523

Reviewed by Simon Fraser.

* html/canvas/WebGLRenderingContext.cpp:
(WebCore::WebGLRenderingContext::getSupportedExtensions): Early return if the
context is pending policy resolution.

Canonical link: https://commits.webkit.org/147581@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164901 268f45cc-cd09-0410-ab3c-d52691b4dbfc